# planepower

./: .eprompt  .gitconfig_sample  .gitignore  .gitmodules  .rtt_component_path  Tupfile  Tuprules.tup  bootstrap.sh  carousel_limits.txt  env.sh  readme_building.txt  readme_rules.txt  readme_setup.txt  setup_precommit_hook  status.txt  udp_communication.c
acado_codegen/: Tupfile  Tuprules.tup  Tuprules_acado.tup  codegen_this_addproperties.py  control_definition.hpp  model_constants.hpp  state_definition.hpp
bbones/: Tuprules  Tuprules.tup  ip_addresses.txt  readme.txt  readme_ros.txt  readme_ubuntu.txt
carousel_identification/: carousel.m  getDataParams.m  getPSD.m  loadData.m  nlp.py  ocp.py  ocp_MS.py  ocp_sine_dddelta.py  processResults.m
cletus_vis/: cletus.cabal  run_hprotoc.sh
cletus_vis/src/: Plotter.hs  ZmqHelpers.hs
components/: .gitignore  createNewComponent.sh  createNewPkg.sh  upgrade_component_to_tup.sh  upgrade_to_tup.sh
components/main/LEDTracker/: BlobExtractor.cpp  BlobExtractor.hpp  CMakeLists.txt  CameraArray.cpp  CameraArray.hpp  LEDTracker.cpp  LEDTracker.hpp  LEDTracker.ops  LEDTrackerTelemetry.cpp  LEDTrackerTelemetry.proto  LEDTracker_external_trigger.ops  Makefile  MedianFinder.cpp  MedianFinder.hpp  MultiViewer.cpp  MultiViewer.hpp  StereoPair.cpp  StereoPair.hpp  Tracer.cpp  Tracer.hpp  Tupfile  blob_extractors.hpp  debayer.hpp  debug.sh  find_segfault  gamma.cpp  gamma.hpp  gdb_me.h  manifest.xml  manifest_diamondback.xml  manifest_electric.xml  readme.txt  record_raw_video.cpp  runLEDTracker.sh  runLEDTracker_external_trigger.sh  test.ops  test_bayer.cpp  test_blob_extractor.cpp  test_camera_array.cpp  test_camera_array_and_blob_extractor.cpp  (+4 more)
components/main/LEDTracker/src/: LEDTracker.cpp  LEDTracker.hpp  MedianFinder.hpp  StereoPair.cpp  Tracer.cpp  Tracer.hpp  blob_extractors.hpp  cout.hpp  gdb_me.cpp  readme.txt  types.hpp
components/main/LEDTracker/src/cvblobs/: BlobContour.h  BlobOperators.cpp  BlobProperties.h  BlobResult.cpp  BlobResult.h  ComponentLabeling.cpp  Makefile  README  blob.h  example.cpp
components/main/LEDTracker/types/: LEDTrackerDataType.hpp  LEDTrackerTypekit.cpp  LEDTrackerTypekit.hpp  Tupfile
components/main/calibrationCamera/: CMakeLists.txt  Tupfile_disabled  calculateCameraParameters.ops  calibrate.h  calibration.hpp  calibrationCamera.ops  manifest.xml  pinhole.cpp  pinhole.h  readme.txt  runCalibrationCamera.sh  test.ops
components/main/calibrationCamera/cpf/: cameraCalibrator.cpf
components/main/calibrationCamera/src/: calibrate.cpp  calibration.cpp  calibration.hpp
components/main/dynamicMHE/: .gitignore  CMakeLists.txt  Tupfile  cameras  dynamicMHE-gnulinux.pc  dynamicMHE.hpp  dynamicMHE.ops  manifest.xml  markers  refactoring_notes.txt  runDynamicMHE.sh  run_mhe_codegen.sh  test.ops
components/main/dynamicMHE/autogenerated/: Tupfile
components/main/dynamicMHE/autogenerated/qpoases/: Tupfile
components/main/dynamicMHE/src/: dynamicMHE.cpp  dynamicMHE.hpp
components/main/dynamicMHE/src/MHE_export/: CMakeLists.txt  FindACADO.cmake  FindMHEExport.cmake  MHE.cpp  MHE_Q.txt  MHE_Qend.txt  cmake_install.cmake  marioMHE.cpp  milanMHE.cpp
components/main/dynamicMHE/src/MHE_export/CameraCalibration/: cameras  markers
components/main/dynamicMHE/src/MHE_export/CameraCalibration/.svn/: all-wcprops  entries
components/main/dynamicMHE/src/MHE_export/CameraCalibration/.svn/text-base/: cameras.svn-base  markers.svn-base
components/main/dynamicMHE/src/MHE_export/kite_export/: .gitignore
components/main/dynamicMHE/src/MHE_export/kite_export/qpoases/: solver.cpp  solver.hpp  solver_backup.cpp
components/main/dynamicMHE/src/MHE_export/kite_export/qpoases/INCLUDE/: QProblem.hpp  SolutionAnalysis.hpp
components/main/dynamicMHE/src/MHE_export/kite_export/qpoases/SRC/: SolutionAnalysis.cpp
components/main/dynamicMPC/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  Makefile  a.out  bar  dynamicMPC-gnulinux.pc  dynamicMPC.cpp  dynamicMPC.ops  foo  manifest.xml  run_mpc_codegen.sh  sample.cpf  test.ops
components/main/dynamicMPC/autogenerated/: Tupfile
components/main/dynamicMPC/autogenerated/qpoases/: Tupfile
components/main/dynamicMPC/code_export_nmpc/qpoases/SRC/: QProblemB.cpp
components/main/dynamicMPC/src/: dynamicMPC.cpp  dynamicMPC.hpp
components/main/dynamicMPC/src/code_export/: acado.h  auxiliary_functions.c  condensing.c  gauss_newton_method.c  integrator.c
components/main/dynamicMPC/src/code_export/qpoases/: solver.cpp  solver.hpp
components/main/dynamicMPC/src/code_export_nmpc/: .gitignore  acado.h  sfunction.cpp  test.c
components/main/dynamicMPC/src/code_export_nmpc/qpoases/: solver.cpp
components/main/poseFromMarkers/: CMakeLists.txt  Tupfile  manifest.xml  missing_build_rules.sh  poseFromMarkers.cpp  poseFromMarkers.hpp  poseFromMarkers.ops  pose_from_markers.c  readme.txt  runposeFromMarkers.sh  test.ops  test.sh
components/main/poseFromMarkers/src/: .gitignore  poseFromMarkers.cpp
components/main/poseFromMarkers/types/: PoseFromMarkersDataType.hpp  PoseFromMarkersTypekit.cpp  PoseFromMarkersTypekit.hpp  Tupfile
components/main/simpleTrajectoryGenerator/: CMakeLists.txt  manifest.xml  simpleTrajectoryGenerator.cpp  simpleTrajectoryGenerator.hpp  simpleTrajectoryGenerator.ops  simpleTrajectoryGenerator.sh  test.ops
components/main/simpleTrajectoryGenerator/src/: simpleTrajectoryGenerator.cpp  simpleTrajectoryGenerator.hpp
configs/: armbone.config  bbone.config  carousel1_pc.config  carousel2_pc.config  carousel2_visualizer.config  main.config  readme.txt
lua/: deployment_helpers.lua  load_carousel_1_hardware.lua  main.lua  open_loop_prbs.lua  plot_line_angles.py  plot_marker_positions.py  plot_open_loop_prbs_data.py  postamble.lua  preamble.lua  push_to_svn.sh  readme.txt  reset_servos.lua  running_helpers.lua  setup_carousel_1_reporters.lua  stress_test_servos.lua  test_mhe.lua  test_servos.lua  warmup.lua  wiggle.lua
matlab_acado_codegen_simulation/: .gitignore  CMakeLists.txt  (+30 more)
rawesome_model_gen/genSimExport/: CMakeLists.txt
(+1372 files in other folders)
