name:                cletus
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


executable plotter
  hs-source-dirs:    src
  main-is:           Plotter.hs
  other-modules:     ZmqHelpers

  build-depends:       base >=4.5 && <4.8
                       , protocol-buffers
                       , protocol-buffers-descriptor
                       , cereal
--                       , dynobud
                       , linear >=1.10
                       , spatial-math
                       , zeromq-haskell
                       , bytestring
                       , semigroups
                       , ghc-prim
                       , Plot-ho-matic >= 0.4.0.0

  default-language: Haskell2010

  ghc-options:        -O2 -threaded
  default-language:    Haskell2010
